Added a login example, and supressed some warning messages coming from the enunciate scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@
 coverage
 rdoc
 pkg
-lib/ruby-fs-stack/enunciate/*.rb
+lib/ruby-fs-stack/enunciate/familytree.rb
+lib/ruby-fs-stack/enunciate/identity.rb
