Setup in Rakefile for the gemspec. Renamed lib/communicator.rb to be consistent with class name.

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@
 coverage
 rdoc
 pkg
-lib/ruby-fs-stack/enunciate/familytree.rb
-lib/ruby-fs-stack/enunciate/identity.rb
+lib/ruby-fs-stack/enunciate/*.rb
+*.gemspec
+*.gem
